Fixing grid layout with alignwide
Adding some protection against using container inside alignwide

--- a/assets/sass/core/_grid-layout.scss
+++ b/assets/sass/core/_grid-layout.scss
@@ -69,9 +69,20 @@
 
   > .full-width, > .alignfull {
     width: auto; //override gutenberg, otherwise negative margins below wont work
-    margin-left: calc(-1 * var(--container-padding)); //negative margins to counteract the containers padding
+    margin-left: calc(-1 * var(--container-padding)); //negative margins to counteract the content-containers padding
     margin-right: calc(-1 * var(--container-padding));
   }
+
+	> .alignwide{
+	  padding-right: 0;
+	  padding-left: 0;
+	  max-width: calc(var(--container) - (var(--container-padding) * 2));
+
+	  .container{
+		padding-right: 0;
+		padding-left: 0;
+	  }
+	}
 
 }
 
@@ -83,12 +94,12 @@
 }
 
 /*--------------------------------------------------------------
-# WP Align Wide Matches the size of a container
+# WP Align Wide Matches the size of a .container
 --------------------------------------------------------------*/
 
 .alignwide {
   width: 100%;
-  max-width: calc(var(--container) - (var(--container-padding) * 2));
+  max-width: var(--container);
   margin-left: auto;
   margin-right: auto;
 }
